<resources>
    <string name="app_name">FirstProject</string>
    <string name="next">다음</string>
    <string name="userId">사용자 아이디</string>
    <string name="subTittle">새 계정에 사용할 e-mail형식의 사용자 아이디를 입력해 주세요.</string>
    <string name="tittle">사용자 계정 만들기</string>
    <string name="logo">InStAx</string>
    <string name="e_mail">e-mail</string>
    <string name="pw">pw</string>
    <string name="loginButton">로그인</string>
    <string name="registerButton">회원가입</string>
    <string name="AccountInfo">사용자 정보</string>
    <string name="AccountSub">상세 정보를 입력해 주세요</string>
    <string name="AccountName">이름</string>
    <string name="AccountMale">남성</string>
    <string name="AccountFemale">여성</string>
    <string name="AccountNum">\t \t 전화번호를 입력해주세요</string>
    <string name="AccountBirth">\t 생년월일을 입력해 주세요</string>
    <string name="AccountHobby">\t \t 취미를 입력해주세요</string>
    <string name="AccountNext">다음</string>
    <string name="pwTittle">사용자 비밀번호 만들기</string>
    <string name="pwSubTittle">새 계정에 사용할 사용자 비밀번호를 입력해 주세요.</string>
    <string name="pwUser">사용자 비밀번호</string>
    <string name="pwUserCheck">비밀번호 재확인</string>

    <string-array name="hobby">
        <item>음악감상</item>
        <item>독서</item>
        <item>웨이트 트레이닝</item>
        <item>자전거 타기</item>
        <item>Tv시청</item>
        <item>우표 수집</item>
        <item>U-tube</item>
        <item>낚시</item>
        <item>익스트림 스포츠</item>
        <item>블로그 챌린지</item>
    </string-array>
</resources>