<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userInfo"
            type="com.example.firstproject.ui.activity.UserInfoActivity" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/titleTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/AccountInfo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="113dp" />

    <TextView
        android:id="@+id/subTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/AccountSub"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/titleTxtView"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/titleTxtView"
        app:layout_constraintTop_toBottomOf="@+id/titleTxtView" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="270dp"
        android:hint="@string/AccountName"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/subTxtView"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="@+id/subTxtView"
        app:layout_constraintTop_toBottomOf="@+id/subTxtView"
        app:layout_goneMarginEnd="200dp" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText">

        <RadioButton
            android:id="@+id/rgbtnMale"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/AccountMale"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <RadioButton
            android:id="@+id/rgbtnFemale"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/AccountFemale"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toEndOf="@+id/rgbtn1"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

    </RadioGroup>


    <EditText
        android:id="@+id/phoneNumEditText"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:hint="@string/AccountNum"
        android:inputType="phone"
        android:singleLine="true"
        android:maxLength="11"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayTxtview" />

    <TextView
        android:id="@+id/birthdayTxtview"
        style="?android:spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:hint="@string/AccountBirth"
        android:onClick="@{userInfo::showDatePickerDialog}"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <TextView
        android:id="@+id/hobbyTxtview"
        style="?android:spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:hint="@string/AccountHobby"
        android:onClick="@{userInfo::showDialog}"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumEditText" />

    <Button
        android:id="@+id/btnActivityMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="16dp"
        android:text="@string/AccountNext"
        android:onClick="@{userInfo::nextActivity}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
        app:layout_constraintVertical_bias="0.831"
        tools:layout_editor_absoluteX="10dp" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:src="@drawable/btn_round_backspace_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>