<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true">

    <data>

        <variable
            name="id"
            type="com.example.firstproject.ui.activity.IdActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/titleTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tittle"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="113dp" />

        <TextView
            android:id="@+id/subTitleTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:text="@string/subTittle"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/titleTxtView"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/titleTxtView"
            app:layout_constraintTop_toBottomOf="@+id/titleTxtView" />

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/userId"
            android:singleLine="true"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/subTitleTxtView"
            app:layout_constraintStart_toStartOf="@+id/subTitleTxtView"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTxtView"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btnActivityPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:onClick="@{id::startPwdActivity}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditText"
            app:layout_constraintVertical_bias="0.036"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:src="@drawable/btn_round_backspace_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>