<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="pw"
        type="com.example.firstproject.ui.activity.PwActivity"/>
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/pwTittle"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="113dp" />

    <TextView
        android:id="@+id/subTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/pwSubTittle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <EditText
        android:id="@+id/pwEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/pwUser"
        android:textSize="10sp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/subTextView"
        app:layout_constraintStart_toStartOf="@+id/subTextView"
        app:layout_constraintTop_toBottomOf="@+id/subTextView"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/pwCheckEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/pwUserCheck"
        android:textSize="10sp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/pwEditText"
        app:layout_constraintStart_toStartOf="@+id/pwEditText"
        app:layout_constraintTop_toBottomOf="@+id/pwEditText"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/btnActivityInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="다음"
        android:onClick="@{pw::startInfoNextActivity}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwCheckEditText"
        android:layout_marginTop="120dp"
        app:layout_constraintVertical_bias="0.036"
        tools:layout_editor_absoluteX="0dp"  />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:paddingEnd="5dp"
        android:src="@drawable/btn_round_backspace_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>